deployment/yaml/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blue-pipeline-ns
  labels:
    app: blue-application-pub
