deployment/yaml/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluewebpub
  namespace: blue-pipeline-ns
  labels:
    app: blue-application-pub
    subname: bluewebpub
spec:
  type: ClusterIP
  ports:
    - name: my-http
      port: 9090
      targetPort: my-http
  selector:
    app: blue-application-pub
    subname: bluewebpub
